--- a/.github/workflows/spring_jib_deploy.yml
+++ b/.github/workflows/spring_jib_deploy.yml
@@ -2,7 +2,12 @@ name: Build and Deploy Spring Boot Application with Jib
 
 on:
   push:
-    branches: main
+    branches:
+      - main
+
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
