--- a/.github/workflows/spring_jib_deploy.yml
+++ b/.github/workflows/spring_jib_deploy.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 19
         uses: actions/setup-java@v3
         with:
-          java-version: "17"
+          java-version: "19"
           distribution: "temurin"
 
       # gradlew에 실행 권한 부여
@@ -40,7 +40,9 @@ jobs:
       - name: Build with Jib and push to ECR
         run: |
           cd BoardApiPractice
-          ./gradlew jib -Djib.to.image=${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+          ./gradlew jib \
+            -Djib.from.image=eclipse-temurin:21.0.3_9-jre-ubi9-minimal \
+            -Djib.to.image=${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
