--- a/BoardApiPractice/src/main/resources/application.yml
+++ b/BoardApiPractice/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: BoardApiPractice
   datasource:
-    url: jdbc:mysql://localhost:3306/mydatabase
-    username: myuser
-    password: mypassword
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -14,7 +14,6 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
-
 
 #  cache:
 #    caffeine:
